# xCrash

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  build.gradle  checkstyle.xml
doc/: tombstone_anr_arm64-v8a.txt  tombstone_anr_armeabi-v7a.txt  tombstone_anr_armeabi.txt  tombstone_anr_x86.txt  tombstone_anr_x86_64.txt  tombstone_java.txt  tombstone_native_arm64-v8a.txt  tombstone_native_armeabi-v7a.txt  tombstone_native_armeabi.txt  tombstone_native_x86.txt  tombstone_native_x86_64.txt
gradle/: publish.gradle  sanitizer.gradle
gradle/wrapper/: gradle-wrapper.properties
src/java/xcrash/: build.gradle  settings.gradle
src/java/xcrash/gradle/: android_artifacts.gradle  bintray_publish.gradle  check.gradle  maven_publish.gradle
src/java/xcrash/gradle/wrapper/: gradle-wrapper.properties
src/java/xcrash/xcrash_lib/: build.gradle  gradle.properties  proguard-rules.pro
src/java/xcrash/xcrash_lib/src/main/cpp/: Android.mk  Application.mk
src/java/xcrash/xcrash_lib/src/main/java/xcrash/: ActivityMonitor.java  AnrHandler.java  Errno.java  FileManager.java  ICrashCallback.java  ILibLoader.java  JavaCrashHandler.java  NativeCrashHandler.java  NativeHandler.java  TombstoneManager.java  TombstoneParser.java  Util.java  Version.java  XCrash.java
src/java/xcrash/xcrash_sample/: build.gradle  proguard-rules.pro
src/java/xcrash/xcrash_sample/src/main/: AndroidManifest.xml
src/java/xcrash/xcrash_sample/src/main/java/xcrash/sample/: MainActivity.java  MyCustomApplication.java  MyService.java
src/java/xcrash/xcrash_sample/src/main/res/layout/: activity_main.xml  activity_second.xml
src/java/xcrash/xcrash_sample/src/main/res/values/: strings.xml
src/native/: CMakeLists.txt  build.sh  build_via_cmake.sh  clean.sh  install.sh
src/native/common/: CMakeLists.txt  xcc_b64.c  xcc_errno.h  xcc_fmt.c  xcc_fmt.h  xcc_libc_support.c  xcc_libc_support.h  xcc_meminfo.c  xcc_meminfo.h  xcc_signal.c  xcc_signal.h  xcc_spot.h  xcc_unwind.c  xcc_unwind.h  xcc_unwind_clang.c  xcc_unwind_clang.h  xcc_unwind_libcorkscrew.c  xcc_util.c  xcc_util.h  xcc_version.h
src/native/libxcrash/jni/: Android.mk  Application.mk  CMakeLists.txt  xc_anr.c  xc_anr.h  xc_common.c  xc_common.h  xc_core.c  xc_core.h  xc_crash.c  xc_crash.h  xc_dl.c  xc_dl.h  xc_fallback.c  xc_fallback.h  xc_jni.c  xc_jni.h  xc_recorder.c  xc_recorder.h  xc_test.c  xc_test.h  xc_trace.c  xc_trace.h  xc_util.c  xc_util.h
src/native/libxcrash_dumper/jni/: Android.mk  CMakeLists.txt  xcd_arm_exidx.c  xcd_arm_exidx.h  xcd_core.c  xcd_dwarf.c  xcd_dwarf.h  xcd_elf.c  xcd_elf.h  xcd_elf_interface.c  xcd_elf_interface.h  xcd_frames.c  xcd_frames.h  xcd_log.h  xcd_map.c  xcd_map.h  xcd_maps.c  xcd_maps.h  xcd_md5.c  xcd_md5.h  xcd_meminfo.c  xcd_meminfo.h  xcd_memory.c  xcd_memory.h  xcd_memory_buf.c  xcd_memory_buf.h  xcd_memory_file.c  xcd_memory_file.h  xcd_memory_remote.c  xcd_memory_remote.h  xcd_process.c  xcd_process.h  xcd_recorder.c  xcd_recorder.h  xcd_regs.h  xcd_regs_arm.c  xcd_regs_arm64.c  xcd_regs_x86.c  xcd_regs_x86_64.c  xcd_sys.c  (+5 more)
src/native/libxcrash_dumper/jni/lzma/: 7zTypes.h  Android.mk  Bra.h  CMakeLists.txt  LzmaDec.c
xcrash_lib/: build.gradle  proguard-rules.pro
xcrash_lib/src/main/: AndroidManifest.xml
xcrash_lib/src/main/cpp/: CMakeLists.txt  xcrash.exports
xcrash_lib/src/main/cpp/common/: xcc_b64.h  xcc_fmt.c  xcc_fmt.h  xcc_libc_support.c  xcc_signal.h  xcc_spot.h  xcc_unwind.c  xcc_unwind.h  xcc_unwind_clang.c  xcc_unwind_libcorkscrew.h  xcc_unwind_libunwind.c  xcc_unwind_libunwind.h  xcc_util.c  xcc_util.h  xcc_version.h
xcrash_lib/src/main/cpp/dl/: README.md
xcrash_lib/src/main/cpp/lzma/: Compiler.h  CpuArch.h  LzmaDec.h  XzDec.c
xcrash_lib/src/main/cpp/xcrash/: xc_common.c  xc_common.h  xc_crash.c  xc_crash.h  xc_fallback.c  xc_jni.c  xc_trace.c  xc_util.h
xcrash_lib/src/main/cpp/xcrash_dumper/: xcd_arm_exidx.c  xcd_core.c  xcd_dwarf.c  xcd_dwarf.h  xcd_elf.c  xcd_elf_interface.c  xcd_elf_interface.h  xcd_log.h  xcd_map.c  xcd_map.h  xcd_maps.c  xcd_memory.c  xcd_memory.h  xcd_memory_buf.c  xcd_memory_file.c  xcd_memory_remote.c  xcd_process.c  xcd_regs.h  xcd_regs_arm64.c  xcd_regs_x86.c  xcd_sys.h  xcd_util.c  xcd_util.h
xcrash_lib/src/main/java/xcrash/: AbiPathProvider.java  ActivityMonitor.java  AnrHandler.java  DefaultLogger.java  ILibLoader.java  ILogger.java  JavaCrashHandler.java  NativeHandler.java  TombstoneParser.java  Util.java  Version.java  XCrash.java
xcrash_sample/: build.gradle
xcrash_sample/src/main/: AndroidManifest.xml
xcrash_sample/src/main/java/xcrash/sample/: MyCustomApplication.java  MyService.java  SecondActivity.java
